project(5th_network)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
#add_executable(${PROJECT_NAME} client.c)
#add_executable(${PROJECT_NAME} server.c)
#add_executable(${PROJECT_NAME} echo_client.c)
#add_executable(${PROJECT_NAME} echo_server.c)
